[project]
name = "a9tools"
version = "0.2.13"
description = "项目基础包"
authors = [
    {name = "zhangzhi", email = "781029588@qq.com"},
]
dependencies = [
    "DrissionPage>=4.0.4.23",
    "loguru>=0.7.2",
    "fake-useragent>=1.5.1",
    "pydantic>=2.7.1",
    "typer>=0.12.3",
    "chrome-extension-python>=1.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
